temporal-verifier/tests/examples/fail/safety1_init.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

mutable p: bool
mutable q: bool

assume p & !q
assume always p'=(p|q) & q'=q
# does not hold initially
assert always !p & !q
